Finish napt integration
This completes integration of the napt plugin with some features we requested upstream. This allows us to minimally configure its behavior and get it all building nicely in our main android repo now.